[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "calcatime"
authors = [
    {name = "Ehsan Iran-Nejad", email = "eirannejad@gmail.com"},
]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.5"
dynamic = ['version', 'description']
dependencies = [
    'docopt',
    'exchangelib',
    'google-api-python-client',
    'google-auth-httplib2',
    'google-auth-oauthlib',
    'tzlocal'
    ]

[project.urls]
Documentation = "https://github.com/eirannejad/calcatime"
Source = "https://github.com/eirannejad/calcatime"

[project.scripts]
calcatime = "calcatime:main"

[tool.flit.module]
name = "calcatime"

[in]
